Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30802

Assertion `index->is_btree() || index->is_ibuf()' failed in btr_search_guess_on_hash

    XMLWordPrintable

Details

    Description

      origin/bb-10.8-thiru 6fe2492299485888814a6d1a7a797fd7540f4e06 2023-03-03T19:05:44+05:30
       
      # 2023-03-03T21:51:59 [4183583] | [rr 4186224 936842]mysqld: /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/btr/btr0sea.cc:1060: bool btr_search_guess_on_hash(dict_index_t*, btr_search_t*, const dtuple_t*, ulint, ulint, btr_cur_t*, mtr_t*): Assertion `index->is_btree() || index->is_ibuf()' failed.
      ...
      # 2023-03-03T21:51:59 [4183583] | Thread 3 (Thread 4186224.4186593):
      # 2023-03-03T21:51:59 [4183583] | #0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      # 2023-03-03T21:51:59 [4183583] | #1  0x00007f4ef5dd9859 in __GI_abort () at abort.c:79
      # 2023-03-03T21:51:59 [4183583] | #2  0x00007f4ef5dd9729 in __assert_fail_base (fmt=0x7f4ef5f6f588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55a743b65420 "index->is_btree() || index->is_ibuf()", file=0x55a743b60c00 "/data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/btr/btr0sea.cc", line=1060, function=<optimized out>) at assert.c:92
      # 2023-03-03T21:51:59 [4183583] | #3  0x00007f4ef5deaf36 in __GI___assert_fail (assertion=assertion@entry=0x55a743b65420 "index->is_btree() || index->is_ibuf()", file=file@entry=0x55a743b60c00 "/data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/btr/btr0sea.cc", line=line@entry=1060, function=function@entry=0x55a743b65380 "bool btr_search_guess_on_hash(dict_index_t*, btr_search_t*, const dtuple_t*, ulint, ulint, btr_cur_t*, mtr_t*)") at assert.c:101
      # 2023-03-03T21:51:59 [4183583] | #4  0x000055a742d16237 in btr_search_guess_on_hash (index=0x6160031c9c08, info=info@entry=0x61a0006b95c0, tuple=tuple@entry=0x61900038f008, mode=mode@entry=4, latch_mode=<optimized out>, cursor=cursor@entry=0x7f4ed2572610, mtr=<optimized out>) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/include/dict0mem.h:1207
      # 2023-03-03T21:51:59 [4183583] | #5  0x000055a742ce9016 in btr_cur_t::search_leaf (this=this@entry=0x7f4ed2572610, tuple=tuple@entry=0x61900038f008, mode=mode@entry=PAGE_CUR_LE, latch_mode=latch_mode@entry=BTR_PURGE_LEAF, mtr=mtr@entry=0x7f4ed2572af0) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/include/btr0cur.h:744
      # 2023-03-03T21:51:59 [4183583] | #6  0x000055a742ad682e in btr_pcur_open (mtr=0x7f4ed2572af0, cursor=0x7f4ed2572610, latch_mode=BTR_PURGE_LEAF, mode=PAGE_CUR_LE, tuple=0x61900038f008) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/include/btr0pcur.h:431
      # 2023-03-03T21:51:59 [4183583] | #7  row_search_index_entry (entry=entry@entry=0x61900038f008, mode=BTR_PURGE_LEAF, pcur=pcur@entry=0x7f4ed2572610, mtr=mtr@entry=0x7f4ed2572af0) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/row/row0row.cc:1281
      # 2023-03-03T21:51:59 [4183583] | #8  0x000055a742ab9325 in row_purge_remove_sec_if_poss_leaf (node=node@entry=0x61a00000e508, index=index@entry=0x6160031c9c08, entry=entry@entry=0x61900038f008) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/include/dict0mem.h:1220
      # 2023-03-03T21:51:59 [4183583] | #9  0x000055a742abe14b in row_purge_remove_sec_if_poss (entry=0x61900038f008, index=0x6160031c9c08, node=0x61a00000e508) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/row/row0purge.cc:571
      # 2023-03-03T21:51:59 [4183583] | #10 row_purge_del_mark (node=node@entry=0x61a00000e508) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/row/row0purge.cc:619
      # 2023-03-03T21:51:59 [4183583] | #11 0x000055a742abecbd in row_purge_record_func (node=node@entry=0x61a00000e508, undo_rec=undo_rec@entry=0x621000057ad8 "", thr=thr@entry=0x61600005a4c0, updated_extern=<optimized out>) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/row/row0purge.cc:1189
      # 2023-03-03T21:51:59 [4183583] | #12 0x000055a742abf451 in row_purge (node=node@entry=0x61a00000e508, undo_rec=undo_rec@entry=0x621000057ad8 "", thr=thr@entry=0x61600005a4c0) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/row/row0purge.cc:1250
      # 2023-03-03T21:51:59 [4183583] | #13 0x000055a742abfd6d in row_purge_step (thr=thr@entry=0x61600005a4c0) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/row/row0purge.cc:1313
      # 2023-03-03T21:51:59 [4183583] | #14 0x000055a742975d56 in que_thr_step (thr=0x61600005a4c0) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/que/que0que.cc:597
      # 2023-03-03T21:51:59 [4183583] | #15 que_run_threads_low (thr=thr@entry=0x61600005a4c0) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/que/que0que.cc:653
      # 2023-03-03T21:51:59 [4183583] | #16 0x000055a7429760c4 in que_run_threads (thr=thr@entry=0x61600005a4c0) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/que/que0que.cc:673
      # 2023-03-03T21:51:59 [4183583] | #17 0x000055a742b6ad20 in srv_task_execute () at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/srv/srv0srv.cc:1599
      # 2023-03-03T21:51:59 [4183583] | #18 0x000055a742b6af13 in purge_worker_callback () at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/storage/innobase/srv/srv0srv.cc:1843
      # 2023-03-03T21:51:59 [4183583] | #19 0x000055a7430289c7 in tpool::task_group::execute (this=0x55a745115500 <purge_task_group>, t=t@entry=0x55a745115440 <purge_worker_task>) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/tpool/task_group.cc:55
      # 2023-03-03T21:51:59 [4183583] | #20 0x000055a743028c3b in tpool::task::execute (this=0x55a745115440 <purge_worker_task>) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/tpool/task.cc:32
      # 2023-03-03T21:51:59 [4183583] | #21 0x000055a74301fd44 in tpool::thread_pool_generic::worker_main (this=0x618000000880, thread_var=0x630000010400) at /data/Server/bb-10.8-thiru_fixing_MDEV-30183/tpool/tpool_generic.cc:576
       
      RQG
      =# git clone https://github.com/mleich1/rqg --branch <pick the right branch> RQG
      #
      # GIT_SHOW: HEAD -> master, origin/master, origin/HEAD 4eb4084904632fa859a9c4aebd04c434bc93ffa1 2023-03-03T12:47:43+01:00
      # rqg.pl  : Version 4.2.1 (2022-12)
      #
      # $RQG_HOME/rqg.pl \
      # --grammar=conf/mariadb/table_stress_innodb_nocopy1.yy \
      # --gendata=conf/mariadb/table_stress.zz \
      # --gendata_sql=conf/mariadb/table_stress.sql \
      # --mysqld=--loose-innodb_lock_schedule_algorithm=fcfs \
      # --mysqld=--loose-idle_write_transaction_timeout=0 \
      # --mysqld=--loose-idle_transaction_timeout=0 \
      # --mysqld=--loose-idle_readonly_transaction_timeout=0 \
      # --mysqld=--connect_timeout=60 \
      # --mysqld=--interactive_timeout=28800 \
      # --mysqld=--slave_net_timeout=60 \
      # --mysqld=--net_read_timeout=30 \
      # --mysqld=--net_write_timeout=60 \
      # --mysqld=--loose-table_lock_wait_timeout=50 \
      # --mysqld=--wait_timeout=28800 \
      # --mysqld=--lock-wait-timeout=86400 \
      # --mysqld=--innodb-lock-wait-timeout=50 \
      # --no_mask \
      # --queries=10000000 \
      # --seed=random \
      # --reporters=Backtrace \
      # --reporters=ErrorLog \
      # --reporters=Deadlock \
      # --validators=None \
      # --mysqld=--log_output=none \
      # --mysqld=--log_bin_trust_function_creators=1 \
      # --mysqld=--loose-debug_assert_on_not_freed_memory=0 \
      # --engine=InnoDB \
      # --restart_timeout=240 \
      # --mysqld=--plugin-load-add=file_key_management.so \
      # --mysqld=--loose-file-key-management-filename=$RQG_HOME/conf/mariadb/encryption_keys.txt \
      # --mysqld=--plugin-load-add=provider_lzo.so \
      # --mysqld=--plugin-load-add=provider_bzip2.so \
      # --mysqld=--plugin-load-add=provider_lzma.so \
      # --mysqld=--plugin-load-add=provider_snappy.so \
      # --mysqld=--plugin-load-add=provider_lz4.so \
      # --mysqld=--loose-innodb_compression_level=1 \
      # --duration=300 \
      # --mysqld=--loose-innodb_fatal_semaphore_wait_threshold=300 \
      # --mysqld=--innodb_file_per_table=0 \
      # --mysqld=--loose-innodb_read_only_compressed=OFF \
      # --mysqld=--loose-innodb-sync-debug \
      # --mysqld=--innodb_stats_persistent=on \
      # --mysqld=--innodb_adaptive_hash_index=on \
      # --mysqld=--log-bin \
      # --mysqld=--sync-binlog=1 \
      # --mysqld=--loose-innodb_evict_tables_on_commit_debug=on \
      # --mysqld=--loose-max-statement-time=30 \
      # --threads=9 \
      # --mysqld=--innodb-use-native-aio=0 \
      # --mysqld=--loose-gdb \
      # --mysqld=--loose-debug-gdb \
      # --rr=Extended \
      # --rr_options=--wait \
      # --mysqld=--innodb_undo_log_truncate=OFF \
      # --mysqld=--innodb_rollback_on_timeout=OFF \
      # --mysqld=--innodb_page_size=32K \
      # --mysqld=--innodb-buffer-pool-size=256M \
      # <local settings>
       
      pluto:/data/results/1677865194/TBR-1825$ _RR_TRACE_DIR=./1/rr/ rr replay --mark-stdio
      
      

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              mleich Matthias Leich
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4d 1h
                  4d 1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.